[gd_scene load_steps=10 format=2]

[ext_resource path="res://pic/主頁面.jpg" type="Texture" id=1]
[ext_resource path="res://script/1.4.0.gd" type="Script" id=2]
[ext_resource path="res://pic/B1.png" type="Texture" id=3]
[ext_resource path="res://fonts/答題記錄.tres" type="StyleBox" id=4]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://pic/news.png" type="Texture" id=6]
[ext_resource path="res://pic/story.png" type="Texture" id=7]
[ext_resource path="res://pic/school.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_size = 1
outline_color = Color( 0.286275, 0.690196, 0.501961, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
margin_right = 1925.0
margin_bottom = 1079.0
script = ExtResource( 2 )

[node name="bg" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 599.0
texture = ExtResource( 1 )

[node name="player" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -239.0
margin_top = -739.0
margin_right = 246.0
margin_bottom = -182.0
icon = ExtResource( 3 )
flat = true

[node name="record" type="Button" parent="bg"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -193.0
margin_top = -149.0
margin_right = 193.0
margin_bottom = -41.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_colors/font_color = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_colors/font_color_hover = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_colors/font_color_pressed = Color( 0.286275, 0.690196, 0.501961, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
text = "答題記錄"
icon_align = 1

[node name="story" type="Button" parent="bg"]
margin_left = 776.0
margin_top = 57.0
margin_right = 1300.0
margin_bottom = 575.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 7 )
flat = true

[node name="news" type="Button" parent="bg"]
margin_left = 1276.0
margin_top = 57.0
margin_right = 1800.0
margin_bottom = 575.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 6 )
flat = true

[node name="school" type="Button" parent="bg"]
margin_left = 276.0
margin_top = 57.0
margin_right = 800.0
margin_bottom = 575.0
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 8 )
flat = true

[connection signal="pressed" from="bg/player" to="." method="_on_player_pressed"]
[connection signal="pressed" from="bg/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="bg/story" to="." method="_on_story_pressed"]
[connection signal="pressed" from="bg/news" to="." method="_on_news_pressed"]
[connection signal="pressed" from="bg/school" to="." method="_on_school_pressed"]
